--- a/Toonshader_ProjectOutlineHDRP/Packages/manifest.json
+++ b/Toonshader_ProjectOutlineHDRP/Packages/manifest.json
@@ -14,7 +14,7 @@
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.toonshader": "file:../../com.unity.toonshader",
     "com.unity.ugui": "1.0.0",
-    "com.unity.visual-compositor": "file:../../../VisualCompositor",
+    "com.unity.visual-compositor": "0.23.1-preview",
     "com.unity.xr.management": "4.0.1",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
